# ice-hockey-rulebot-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  auth.py  docker-compose.yaml  heroku.yml  pyproject.toml  requirements.txt  routers.py  taskfile.yml
api/: Dockerfile
config/: config.yaml
data/: iihf-qa.yaml
notebooks/: iihf-qa-v2.ipynb
src/: rulebook.py
src/icehockey_rules/: __init__.py  app.py  auth.py  chat.py  config.py  pipelines.py  retrieve.py  routers.py  rulebook.py
tests/: conftest.py
tests/integration/: test_routers.py
tests/unit/: test_chat.py  test_retrieve.py  test_rulebook.py
