[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name =  "icehockey-rules"
authors = [
    {name = "Alex Loosley", email = "aloosley@alumni.brown.edu"}, ]
description = "Package for analyzing ice hockey rules."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12", ]
requires-python = ">=3.12.0"
dynamic = ["version"]
dependencies = {file = ["requirements.txt"]}


[project.optional-dependencies]
dev = [
    "bandit[toml]>=1.7.5",
    "black>=24.1.0",
    "codespell>=2.2.6",
    "check-manifest>=0.49",
    "jupyter>=1.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0", ]
build_index = [
    "langchain-text-splitters>=0.2.1"]

[project.urls]
Documentation = "https://github.com/aloosley/ice-hockey-rulebot-api/tree/main#readme"
Source = "https://github.com/aloosley/ice-hockey-rulebot-api"

[tool.flit.module]
name = "icehockey_rules"
